SERVER-88155 Respect snapshot read concern for timeseries writes without shard key (#20227)

GitOrigin-RevId: a48e9071d1a53bc3104065461ce1486944e2eda0